--- a/src/app/Components/card-view/card-view.component.scss
+++ b/src/app/Components/card-view/card-view.component.scss
@@ -16,9 +16,16 @@
   box-shadow         : rgba(0, 0, 0, 0.16) 0px 5px 6px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
-.checks {
+.checks,
+.sort,
+.paginator {
   font-size : larger;
   text-align: center;
+  margin    : 1.2rem 0.5rem
+}
+
+.header {
+  font-weight: bold;
 }
 
 .check {
