--- a/src/app/Components/card-view/card-view.component.scss
+++ b/src/app/Components/card-view/card-view.component.scss
@@ -14,6 +14,11 @@
   width              : 3rem;
   // background-color: rgb(248, 254, 237);
   box-shadow         : rgba(0, 0, 0, 0.16) 0px 5px 6px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  font-size          : large;
+}
+
+#sortBy {
+  font-size: large;
 }
 
 .checks,
@@ -33,22 +38,26 @@
   margin : 1rem;
 }
 
-ul.nav {
-  padding-left    : 0px;
-  background-color: #3D99CE;
-  text-align      : center;
+.switch {
+  padding: 5px;
+  margin : 20px;
 }
 
-ul.nav>li {
-  display: inline-block;
-  padding: 10px 20px;
+.switch label {
+  font-weight: bold;
 }
 
-ul.nav>li:hover {
-  background-color: #2779BF;
+.switch :hover {
+  background-color  : #def;
+  border            : 2px;
+  border-style      : groove;
+  border-radius     : 7px;
+  padding           : 3px 5px;
+  box-shadow        : rgba(0, 0, 0, 0.16) 0px 5px 6px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  //vertical-align  : text-bottom;
 }
 
-ul.nav>li>a {
-  color          : white;
-  text-decoration: none;
+#sortIcon {
+  //padding: 15px 0 -15px 0;
+  vertical-align: text-bottom;
 }
