--- a/src/app/Components/card-view/card-view.component.scss
+++ b/src/app/Components/card-view/card-view.component.scss
@@ -38,16 +38,16 @@
   margin : 1rem;
 }
 
-.switch {
+.sortOrderSwitch {
   padding: 5px;
   margin : 20px;
 }
 
-.switch label {
+.sortOrderSwitch label {
   font-weight: bold;
 }
 
-.switch :hover {
+.sortOrderSwitch :hover {
   background-color  : #def;
   border            : 2px;
   border-style      : groove;
