--- a/src/app/Components/map/map.component.html
+++ b/src/app/Components/map/map.component.html
@@ -1,40 +1,5 @@
 <h1>Map View</h1>
 
-<!-- google-map id="map" width="100%" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)"-->
-
-<!--google-map>
+<google-map id="map" width="100%" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)">
   <div id="markerDiv" #markerDiv *ngFor="let marker of markers"></div>
 </google-map>
-
-<span class="material-symbols-outlined">
-  landslide
-</span>
-ebd7
-
-<!--
-
-  [center]="center" [zoom]="zoom"
-  (mapMousemove)="onMapMouseMove($event)" (zoomChanged)="onMapZoomed()"
-
-
-  article class="list-item">
-  <span class="title">{{index}} - {{disaster.incidentType}}</span>
-
-  <h3 class="list-head" [ngStyle]="getDisasterColorStyle(disaster.incidentType)">{{disaster.femaDeclarationString}}:
-    &nbsp;&nbsp;
-    {{disaster.declarationTitle}}</h3>
-
-  <div class="list-location">{{disaster.designatedArea}}, {{disaster.state}} {{disaster.placeCode}}</div>
-
-
-  <details>
-    <summary>More Details <span class="list-details"><a href="/details/{{index}}">All details</a></span></summary>
-    <span class="list-date">{{disaster.incidentBeginDate | date: 'shortDate' }} to
-      {{disaster.incidentEndDate | date: 'shortDate'}}; closed {{disaster.disasterCloseoutDate | date:
-      'shortDate'}}</span>
-    <div class="list-description">FIPS: {{disaster.fipsCountyCode}} & {{disaster.fipsStateCode}}; Request
-      # {{disaster.declarationRequestNumber}}</div>
-  </details>
-  <!   -- div class="list-subhead"></div --   >
-
-<article -->
