--- a/src/app/Components/card-view/card-view.component.html
+++ b/src/app/Components/card-view/card-view.component.html
@@ -6,8 +6,8 @@
   <select name="sortBy" id="sortBy" (change)="sortBy($event)">
     <option value="" disabled>--Please choose an option--</option>
     <option value={{serverSort}}>{{serverSort}}</option>
-    <<ng-container *ngFor="let prop of propArray">
-      <option value="{{prop.key}}">{{prop.key}}</option>
+    <<ng-container *ngFor="let key of keyArray">
+      <option value="{{key.key}}">{{key.key}}</option>
       </ng-container>
   </select>
 
