--- a/src/app/Components/list-item/list-item.component.html
+++ b/src/app/Components/list-item/list-item.component.html
@@ -5,7 +5,7 @@
     &nbsp;&nbsp;
     {{disaster.declarationTitle}}</h3>
 
-  <div class="list-location">{{disaster.designatedArea}}, {{disaster.state}} {{disaster.placeCode}}</div>
+  <div class="list-location">FEMA Place: {{disaster.placeCode}} - {{disaster.designatedArea}}, {{disaster.state}}</div>
 
 
   <details>
