--- a/src/app/Components/map/map.component.scss
+++ b/src/app/Components/map/map.component.scss
@@ -3,23 +3,46 @@
   //width             : 100%;
   //margin          : 10px;
   //background-color: aqua;
-  width : 100%;
-  height: 500px;
+  width : 834px;
+  height: 621px;
 }
 
-.xxmap-container {
-  //width           : 100%;
+div#content {
+  width : 100%;
+  height: 100%;
+}
+
+div#map-container {
+  width : 100%;
+  height: 100%;
+}
+
+.myMap {
+  width           : 877px !important;
+  height          : 100%;
+  background-color: rgb(196, 255, 228);
+  position        : relative;
+  display         : block;
+}
+
+.map-container {
+  width           : 888px !important;
   height          : 100%;
   background-color: bisque;
 }
 
-#xxcontainer,
-#xxgmap {
+#map {
+  position: relative;
+}
+
+#container,
+#map {
   //height: 100%;
   width: 100%;
 }
 
-#xxgMap {
+#map {
+  width   : 100% !important;
   position: relative;
 }
 
