--- a/src/app/Components/map/map.component.html
+++ b/src/app/Components/map/map.component.html
@@ -1,9 +1,5 @@
-<h1>Map Component View</h1>
+<h1>Map View</h1>
 
-<google-map id="map" class="myMap" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)">
+<google-map id="map" height="60vh" width="100%" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)">
   <div #markerDiv *ngFor="let marker of markers"></div>
 </google-map>
-<!--
-style="width:820px !important;"
-id="markerDiv"
--->
